# lectures

./: .gitignore  LICENSE  README.md  utils.py
101/load_inline/: cuda_load_inline.py  load_inline_test.py  rgb_to_grey.py  rgb_to_grey_uint8.py
101/load_inline/load_inline_cuda/: .ninja_deps  (+1 more)
lecture 14/: A_Practitioners_Guide_to_Triton.ipynb
lecture1/: hello_load_inline.py  load_inline.py  main.py  ncu_logs  nsys_square.py  numba_square.py  pt_profiler.py  pytorch_square.py  square_kernel.ptx  triton_square.py
lecture1/load_inline_cuda/: .ninja_deps  .ninja_log  build.ninja  cuda.cu  main.cpp
lecture1/tmp/: .ninja_deps  .ninja_log  build.ninja
lecture13/: howto_log_sum_exp.ipynb
lecture17/: README.md  ddp_example.py  ddp_simple.py
lecture2/: README.md
lecture2/mean_filter/: mean_filter.py
lecture3/: pmpp.ipynb
lecture4/: cuda-mode-session-4.ipynb
lecture5/: matmul_l5.ipynb
lecture8/: occupancy.cu  privatization.cu
lecture9/: control_divergence_reduce.cu  nondeterminism.py  sensitivity.py  shared_reduce.cu  simple_reduce.cu
lecture_001/: README.md  pytorch_square.py  test.py  triton_profile  triton_square.py
lecture_001/load_inline_cuda/: .ninja_deps  .ninja_log  build.ninja
lecture_001/tmp/: .ninja_deps  .ninja_log  build.ninja  main.cpp
lecture_002/: cuda_mode_lecture2.pptx
lecture_002/mean_filter/: mean_filter_kernel.cu
lecture_002/rgb_to_grayscale/: grayscale_kernel.cu
lecture_002/vector_addition/: vector_addition.cu
lecture_003/: pmpp.ipynb
lecture_005/: matmul_l5.ipynb
lecture_008/: README.md  coalesce.cu  coarsening.cu  divergence.cu  privatization  privatization2.cu  tiling.cu
lecture_009/: accuracy.py  multistream-reduce.cu  reduce_coarsening.cu  reduce_compile.py  segment_reduce.cu  torch_reductions.py
lecture_012/: flash_attention.cu  flash_attention.ipynb  flash_attention_spilling_from_registers.cu  main.cu  test_attention  torch_extension_template.cu
lecture_013/: FLOPS_scaling_attention_sequence_length.ods
lecture_014/: A_Practitioners_Guide_to_Triton.ipynb  Qs.md  triton_util.py
lecture_018/: FusedKernels.ipynb  README.md  criteo_dataset.py  lora_on_simple_mlp.py  model.py  model_hyperparameters_main.json  model_hyperparameters_small.json  model_train.py  torch_compile_generated_cpu.py  torch_compile_generated_triton.py
lecture_018/kernels/: CMakeLists.txt  profile_fused_kernel_add_mul_activation.py  triton_fused_add_mul_activation.py  triton_fused_add_mul_relu.py  triton_pointwise_add_relu_fused.py
lecture_018/kernels/src/: dlrm_kernels_main.cc  fused_kernels_lora_main.cc  fused_kernels_lora_on_mlp.cu  fused_kernels_lora_on_mlp.cuh  pointwise_add_relu_fused.cu  pointwise_add_relu_fused.cuh
lecture_018/tb_logs_pregenerated/: events.out.tfevents.1714868316.ksharma-xps.318186.0model_hyperparameters_initial  events.out.tfevents.1714869602.ksharma-xps.321443.0model_hyperparameters_initial  events.out.tfevents.1714870276.ksharma-xps.323482.0model_hyperparameters_initial  (+5 more)
lecture_025/: README.md
lecture_029/: add_kernel.9969bdda_0123.c  add_kernel.9969bdda_0123.h  presentation.md  vector_add.py
lecture_030/: README.md  [GPU_MODE]_Quantized_training.ipynb
lecture_031/: README.md  gemm_perf_studies.mm
lecture_033/: README.md
lecture_035/: README.md
lecture_057/: README.md
lecture_104/: README.md
mean_filter/: mean_filter_kernel.cu
rgb_to_grayscale/: grayscale_kernel.cu  rgb_to_grayscale.py
vector_addition/: Makefile
